# DSCI490-Shakespearean-Personality-LLM-Augmentation-

./: .gitignore  AGENT.md  README.md  app.py  newjson.json  requirements.txt  roughRoadmap.md  runWebDemo.sh  run_tests.sh  setup.sh  tui.py  tui_basic.py
benchmarking/: README.md  benchmark_development.ipynb  benchmark_pipeline.ipynb  benchmark_tasks.json  perseval_plan.md  text_utils.py
data/: character_profile_hamlet.json  character_profile_hamlet.txt  hamlet_full_play.txt  hamlet_onlyhamletraw.txt  hamlet_plain_english.txt  hamlet_speaker_aware_context.json  hamlet_speaker_aware_messages.json
docs/: README.md  citations.md  multimodelPlan.md  pipeline_flow.md  rLStrategies.md  roughRoadmap.md
generation/: README.md  model_size_testing.ipynb
interface/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
misc/: generation_testing.py
models/: models.py
pipeline/: README.md  character_profile_parser.py  data_ingestion.py  dynamic_system_prompt.py  feedback_store.py  lm_generation.py  local_logging.py  multimodel.py  rag.py  span_weights.py
testing/: test_multimodel.py  test_translator.py
tests/: test_app_contract.py  test_lm_generation_contract.py
training/: README.md  conversation_log_reader.py  full_play_translator.py  hamlet_speaker_aware_to_message_style_prompt.py  lora_1.ipynb  lora_2.ipynb  lora_2.py  lora_3.ipynb  lora_3.py  lora_4.py  lora_5.py  raw_dialouge_translator.py  retrain_from_logs.py  rl_dataset.py  rl_hamlet_ppo.py  rl_rewards.py  (+1 more)
uv_config/: main.py  pyproject.toml
(+149 files in other folders)
